// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injectGlobal babel 6 dynamic change import 1`] = `
"
import { injectGlobal as inject } from 'emotion';
inject('body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}');
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 6 injectGlobal assign to variable 1`] = `
"import \\"./emotion.css\\";

const thisWillBeUndefined = undefined;


emotion.css
body{margin:0;padding:0;}body > div{display:none;}html{background:green;}"
`;

exports[`injectGlobal babel 6 injectGlobal basic 1`] = `
"
injectGlobal(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");"
`;

exports[`injectGlobal babel 6 injectGlobal basic 2`] = `
"import \\"./emotion.css\\";

undefined;


emotion.css
body{margin:0;padding:0;}body > div{display:none;}html{background:green;}"
`;

exports[`injectGlobal babel 6 injectGlobal with interpolation 1`] = `
"
injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"
`;

exports[`injectGlobal babel 6 injectGlobal with interpolation 2`] = `
"
injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"
`;

exports[`injectGlobal babel 6 static change import 1`] = `
"
inject(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 7 dynamic change import 1`] = `
"import { injectGlobal as inject } from 'emotion';
inject(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;

exports[`injectGlobal babel 7 injectGlobal assign to variable 1`] = `
"import \\"./emotion.css\\";
const thisWillBeUndefined = undefined;


emotion.css
body{margin:0;padding:0;}body > div{display:none;}html{background:green;}"
`;

exports[`injectGlobal babel 7 injectGlobal basic 1`] = `"injectGlobal(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");"`;

exports[`injectGlobal babel 7 injectGlobal basic 2`] = `
"import \\"./emotion.css\\";
undefined;


emotion.css
body{margin:0;padding:0;}body > div{display:none;}html{background:green;}"
`;

exports[`injectGlobal babel 7 injectGlobal with interpolation 1`] = `"injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"`;

exports[`injectGlobal babel 7 injectGlobal with interpolation 2`] = `"injectGlobal(\\"body{margin:0;padding:0;display:\\", display, \\";& > div{display:none;}}html{background:green;}\\");"`;

exports[`injectGlobal babel 7 static change import 1`] = `
"inject(\\"body{margin:0;padding:0;& > div{display:flex;}}html{background:green;}\\");
injectGlobal\`
      body {
        margin: 0;
        padding: 0;
        & > div {
          display: flex;
        }
      }
      html {
        background: green;
      }
    \`;"
`;
